--- a/kod-css/golfklubb-style.css
+++ b/kod-css/golfklubb-style.css
@@ -365,8 +365,8 @@ p {
 /*Start of Geneskod: Tävlingar och Evenemang*/
 .tav {
     text-align: center;
-    font-family: Arial;
-    font-size: 1.5em;
+    font-family: 'Times New Roman';
+    font-size: 1.4em;
 }
 
 .tavlingar {
