--- a/kod-css/medlem.css
+++ b/kod-css/medlem.css
@@ -418,6 +418,7 @@ footer {
     color: white;
     padding: 40px 20px;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
  
 .footer-container {
@@ -472,7 +473,8 @@ footer {
 .footer-social a:hover img {
     opacity: 0.8;
 }
- 
+
+/*Start of Geneskod: Copyright*/
 hr.line {
     width: 90%;
     border: 0.5px solid #555;
@@ -481,11 +483,10 @@ hr.line {
  
 .footer-container-legal {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
-    font-family: Arial, sans-serif;
-    font-size: 0.85rem;
+    font-size: 0.8em;
     margin-top: 20px;
 }
  
@@ -497,7 +498,8 @@ hr.line {
 .footer-container-legal a:hover {
     color: rgb(128, 128, 128);
 }
- 
+/*End of Geneskod: Copyright*/
+
 @media (max-width: 768px) {
     .footer-container {
         flex-direction: column;
@@ -512,12 +514,21 @@ hr.line {
         text-align: center;
         max-width: 100%;
     }
- 
+    
+     /*Start of Geneskod: @media Copyright*/
+    .footer-container-legal {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    
     hr.line {
         width: 100%;
     }
+    /*End of Geneskod: @media Copyright*/
+}
 
-
+@media (max-width: 768px) {
     .login-form, .register-form {
         width: 100%;
     }
