--- a/kod-css/bokning-style.css
+++ b/kod-css/bokning-style.css
@@ -22,6 +22,10 @@ body {
     overflow-x: hidden;
 }
 
+footer {
+    font-family: Arial, Helvetica, sans-serif !important;
+}
+
 /*Gästsidan*/
 
 .guest-header img {
@@ -153,7 +157,7 @@ body {
 
 /*Gästsidan slut*/
 
-/*Priser & bokningsregler*/
+/*Greenfee och regler*/
 
 .greenfee-header img {
     width: 100%;
@@ -271,7 +275,7 @@ body {
 
 .bottom-info h2 {
     padding: 2rem;
-    margin: 0 5rem 0 0 5rem;
+    margin: 0 5rem 0 5rem;
     font-size: 1.3rem;
 }
 
@@ -291,7 +295,7 @@ body {
     border-radius: 5px;
 }
 
-/*Priser & bokningsregler slut*/
+/*Greenfee och regler slut*/
 
 /*Företagssida*/
 
@@ -612,7 +616,7 @@ body {
 
 /* Gäst responsiv slut */
 
-/* Bokning responsiv */
+/* Greenfee och regler responsiv */
 
 @media (max-width: 1024px) {
     .greenfee-header img {
@@ -675,9 +679,6 @@ body {
     .greenfee, .booking-rules {
         display: flex;
         flex-direction: column;
-        justify-content: left;
-        align-items: left;
-
     }
     
     .greenfee-title h1, .rules-title h1 {
@@ -700,7 +701,7 @@ body {
     }
 }
 
-/* Bokning responsiv slut */
+/* Greenfee och regler responsiv slut */
 
 /* Företag responsiv */
 
