--- a/kod-css/tavlingar-evenemang.css
+++ b/kod-css/tavlingar-evenemang.css
@@ -598,7 +598,11 @@ button:hover {
   }
 
   .schedulefoto {
-    display: none;
+    margin: auto;
+    margin-bottom: 1.5em;
+    width: 50%;
+    padding: 1em;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   }
 
   .regform {
