--- a/kod-css/banorna.css
+++ b/kod-css/banorna.css
@@ -11,7 +11,7 @@ html, body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height:calc(100vh-100px);
+  /*  min-height:calc(100vh-100px); */
     width: 100%;
     display: flex;
     align-items: center;
