--- a/kod-css/omoss.css
+++ b/kod-css/omoss.css
@@ -12,7 +12,7 @@ body, html {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: (calc100vh-100px);
+    /* min-height: (calc100vh-100px); */
     width: 100%;
     display: flex;
     align-items: center;
