--- a/kod-css/visiontest2.css
+++ b/kod-css/visiontest2.css
@@ -12,7 +12,7 @@ html, body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: calc(100vh-100px);
+    /* min-height: calc(100vh-100px);*/
     width: 100%;
     display: flex;
     align-items: center;
@@ -70,7 +70,7 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: (calc100vh-100px);
+   /* height: (calc100vh-100px);*/
     flex: 1;
     /* flex-wrap: wrap; */
 }
