--- a/kod-css/restaurang.css
+++ b/kod-css/restaurang.css
@@ -70,7 +70,7 @@ justify-content: space-evenly;
 .backgound-meny {
     background-image: url(/bilder/table-791167_1280.jpg);
     width: 100%;
-    min-height: calc(100vh-100px);
+   /* min-height: calc(100vh-100px); */
     z-index: 1;
     background-attachment: fixed;
     object-fit: cover;
