--- a/kod-css/restaurang.css
+++ b/kod-css/restaurang.css
@@ -38,6 +38,7 @@ flex-direction: row;
 justify-content: space-evenly;
 }
 
+
 @media (max-width: 800px) {
     .Takeaway-och-kontakt {
         flex-direction: column; /* Ändrar layouten till att stapla elementen vertikalt */
@@ -57,7 +58,7 @@ justify-content: space-evenly;
     margin-top: 30px;
 }
 
-#kontaktaosstext {
+.kontaktaosstext {
     border-bottom: solid 2px rgb(255, 255, 255);
     border-top: 2px solid rgb(255, 255, 255);
     margin-bottom: 200px;
@@ -70,7 +71,7 @@ justify-content: space-evenly;
 .backgound-meny {
     background-image: url(/bilder/table-791167_1280.jpg);
     width: 100%;
-   /* min-height: calc(100vh-100px); */
+    /* min-height: calc(100vh-100px); */
     z-index: 1;
     background-attachment: fixed;
     object-fit: cover;
@@ -256,6 +257,8 @@ body {
     display: flex;
     justify-content: space-around;
     position: relative;
+    flex-direction: column;
+    align-items: center;
 }
 /* MEDIA FÖR RESTURANG --------------------------*/
 @media screen and (max-width:800px) { 
@@ -333,3 +336,5 @@ body {
         margin-bottom: 20px;
     }
 }
+
+
